create table "public"."roles" (
    "id" bigint generated by default as identity not null,
    "nome" character varying not null
);


alter table "public"."roles" enable row level security;

create table "public"."users_roles" (
    "id" bigint generated by default as identity not null,
    "user_id" uuid not null,
    "role_id" bigint not null
);


alter table "public"."users_roles" enable row level security;

CREATE UNIQUE INDEX roles_pkey ON public.roles USING btree (id);

CREATE UNIQUE INDEX users_roles_pkey ON public.users_roles USING btree (id);

alter table "public"."roles" add constraint "roles_pkey" PRIMARY KEY using index "roles_pkey";

alter table "public"."users_roles" add constraint "users_roles_pkey" PRIMARY KEY using index "users_roles_pkey";

alter table "public"."users_roles" add constraint "users_roles_role_id_fkey" FOREIGN KEY (role_id) REFERENCES roles(id) ON DELETE CASCADE not valid;

alter table "public"."users_roles" validate constraint "users_roles_role_id_fkey";

alter table "public"."users_roles" add constraint "users_roles_user_id_fkey" FOREIGN KEY (user_id) REFERENCES auth.users(id) ON DELETE CASCADE not valid;

alter table "public"."users_roles" validate constraint "users_roles_user_id_fkey";

grant delete on table "public"."roles" to "anon";

grant insert on table "public"."roles" to "anon";

grant references on table "public"."roles" to "anon";

grant select on table "public"."roles" to "anon";

grant trigger on table "public"."roles" to "anon";

grant truncate on table "public"."roles" to "anon";

grant update on table "public"."roles" to "anon";

grant delete on table "public"."roles" to "authenticated";

grant insert on table "public"."roles" to "authenticated";

grant references on table "public"."roles" to "authenticated";

grant select on table "public"."roles" to "authenticated";

grant trigger on table "public"."roles" to "authenticated";

grant truncate on table "public"."roles" to "authenticated";

grant update on table "public"."roles" to "authenticated";

grant delete on table "public"."roles" to "service_role";

grant insert on table "public"."roles" to "service_role";

grant references on table "public"."roles" to "service_role";

grant select on table "public"."roles" to "service_role";

grant trigger on table "public"."roles" to "service_role";

grant truncate on table "public"."roles" to "service_role";

grant update on table "public"."roles" to "service_role";

grant delete on table "public"."users_roles" to "anon";

grant insert on table "public"."users_roles" to "anon";

grant references on table "public"."users_roles" to "anon";

grant select on table "public"."users_roles" to "anon";

grant trigger on table "public"."users_roles" to "anon";

grant truncate on table "public"."users_roles" to "anon";

grant update on table "public"."users_roles" to "anon";

grant delete on table "public"."users_roles" to "authenticated";

grant insert on table "public"."users_roles" to "authenticated";

grant references on table "public"."users_roles" to "authenticated";

grant select on table "public"."users_roles" to "authenticated";

grant trigger on table "public"."users_roles" to "authenticated";

grant truncate on table "public"."users_roles" to "authenticated";

grant update on table "public"."users_roles" to "authenticated";

grant delete on table "public"."users_roles" to "service_role";

grant insert on table "public"."users_roles" to "service_role";

grant references on table "public"."users_roles" to "service_role";

grant select on table "public"."users_roles" to "service_role";

grant trigger on table "public"."users_roles" to "service_role";

grant truncate on table "public"."users_roles" to "service_role";

grant update on table "public"."users_roles" to "service_role";


