Table auth.users {
  id uuid [primary key]
  email varchar [not null]
  encrypted_password varchar
  email_confirmed_at timestamptz
  role varchar
  raw_app_meta_data jsonb
  raw_user_meta_data jsonb
  last_sign_in_at timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  phone varchar
  confirmed_at timestamptz
  is_sso_user boolean [default: false]
  deleted_at timestamptz
  is_anonymous boolean [default: false]

  indexes {
    email [unique]
    phone [unique]
  }

}Table clientes {
  id integer [primary key]
  user_id uuid [unique]
  nome_completo varchar [not null]
  criado_em timestamp [not null]
  removido_em timestamp
}

Table roles {
  id integer [primary key]
  nome varchar [not null]
}

Table users_roles {
  id integer [primary key]
  user_id uuid [unique]
  role_id integer [not null]
}

Table produtos {
  id integer [primary key]
  descricao varchar [not null]
  preco integer [not null]
  estoque int [not null, default: 0]
  criado_em timestamp [not null, default: "now"]
  removido_em timestamp
}

Table pedidos {
  id integer [primary key]
  cliente_id integer [not null]
  criado_em timestamp [not null, default: "now"]
  entrega_prevista_em timestamp [not null]
  entregue_em timestamp
  estado int [not null]
}

Table pedidos_produtos {
  pedido_id integer [primary key]
  produto_id integer [primary key]
  preco_no_pedido integer [not null]
  quantidade int [not null, default: 1]
  removido_em timestamp
}

Ref: clientes.user_id > auth.users.id
Ref: users_roles.user_id > auth.users.id
Ref: users_roles.role_id > roles.id
Ref: pedidos.cliente_id > clientes.id
Ref: pedidos_produtos.pedido_id > pedidos.id
Ref: pedidos_produtos.produto_id > produtos.id
